--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>uk.co.datumedge</groupId>
+            <artifactId>hamcrest-json</artifactId>
+            <version>0.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
